Signal components are collapsable and a preview is shown; new type of envelops and waves; fixes audio; signals can be exported and imported.

--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ body {
     overflow-y: auto;
     z-index: 10;
     box-shadow: 4px 0 12px rgba(0,0,0,0.02);
+    height: 100%;
 }
 
 header h1 {
@@ -396,6 +397,8 @@ button.secondary:hover {
     /* Dotted Background */
     background-image: radial-gradient(var(--color-border) 1px, transparent 1px);
     background-size: 20px 20px;
+    height: 100%;
+    min-width: 0; /* Flexbox overflow safety */
 }
 
 .plot-container {
@@ -612,7 +615,7 @@ input.double-slider-input::-moz-range-thumb:hover {
 
 .envelope-preview {
     width: 100%;
-    height: 80px;
+    height: 60px;
     background: transparent;
     border-bottom: 1px solid var(--color-border);
     margin-bottom: 12px;
